tests/invalid/ternary/01_cond_not_bool.cps
let a: integer = 1;
let b: integer = 2;
let m = (a) ? a : b;   // cond no es booleanE040
